--- a/front_androg/package.json
+++ b/front_androg/package.json
@@ -11,6 +11,7 @@
     "axios": "^1.4.0",
     "qs": "^6.11.1",
     "react": "^18.2.0",
+    "react-daum-postcode": "^3.1.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-query": "^3.39.3",
