--- a/androg/src/main/resources/application.yml
+++ b/androg/src/main/resources/application.yml
@@ -4,6 +4,46 @@ spring:
     url: jdbc:mysql://portfolio.cgdrwidry3wi.ap-northeast-2.rds.amazonaws.com:3306/androg
     username: admin
     password: 1q2w3e4r
+  security:
+    oauth2:
+      client:
+        registration:
+          google:
+            client-id: 
+            client-secret:
+            scope:
+             - email
+             - profile
+          kakao:
+            client-id: 
+            client-secret: 
+            redirect-uri: http://localhost:8080/login/oauth2/code/kakao
+            authorization-grant-type: authorization_code
+            client-authentication-method: POST
+            client-name: Kakao
+            scope:
+             - profile
+             - account_email
+          naver:
+            client-id: 
+            client-secret: 
+            redirect-uri:  http://localhost:8080/login/oauth2/code/naver
+            authorization-grant-type: authorization_code
+            scope:
+             - name
+             - email
+        provider:
+          kakao:
+            authorization-uri: https://kauth.kakao.com/oauth2/authorize
+            token-uri: https://kauth.kakao.com/oauth/token
+            user-info-uri: https://kapi.kakao.com/v2/user/me
+            user-name-attribute: id
+          naver:
+            authorization-uri: https://nid.naver.com/oauth2.0/authorize
+            token-uri: https://nid.naver.com/oauth2.0/token
+            user-info-uri: https://openapi.naver.com/v1/nid/me
+            user-name-attribute: response
+             
 
 mybatis:
   mapper-locations:
