--- a/androg/src/main/resources/application.yml
+++ b/androg/src/main/resources/application.yml
@@ -4,6 +4,11 @@ spring:
     url: jdbc:mysql://portfolio.cgdrwidry3wi.ap-northeast-2.rds.amazonaws.com:3306/androg
     username: admin
     password: 1q2w3e4r
+  servlet:
+    multipart:
+      max-file-size: 100MB
+      max-request-size: 100MB
+        
   security:
     oauth2:
       client:
