--- a/androg/src/main/resources/application.yml
+++ b/androg/src/main/resources/application.yml
@@ -13,33 +13,33 @@ spring:
     oauth2:
       client:
         registration:
-           google:
+          google:
             client-id: 821126360659-in3nrsqk4lkk931p6skmsbkbs99na8ph.apps.googleusercontent.com
             client-secret: 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
             scope:
-             - email
-             - profile
-#           kakao:
-#            client-id: 
-#            client-secret:  
-#            redirect-uri: http://localhost:8080/login/oauth2/code/kakao
-#            authorization-grant-type: authorization_code
-#            client-authentication-method: POST
-#            client-name: Kakao
-#            scope:
-#             - profile
-#             - account_email
-           naver:
+              - email
+              - profile
+          kakao:
+            client-id: 1932e3e68d4e6ca2ec3e566e6b6b55f7
+            client-secret: BsNWBsgDcAM0Ff4A7CpgBZOBM2jtNXMd
+            redirect-uri: http://localhost:8080/login/oauth2/code/kakao
+            authorization-grant-type: authorization_code
+            client-authentication-method: POST
+            client-name: Kakao
+            scope:
+              - profile_nickname
+              - account_email
+          naver:
             client-id: QWEPYwG2j9mrsHN2I81l
             client-secret: RitP1Sj6kz
             redirect-uri:  http://localhost:8080/login/oauth2/code/naver
             authorization-grant-type: authorization_code
             scope:
-             - name
-             - email
+              - name
+              - email
         provider:
           kakao:
-            authorization-uri: https://kauth.kakao.com/oauth2/authorize
+            authorization-uri: https://kauth.kakao.com/oauth/authorize
             token-uri: https://kauth.kakao.com/oauth/token
             user-info-uri: https://kapi.kakao.com/v2/user/me
             user-name-attribute: id
