--- a/androg/src/main/resources/application.yml
+++ b/androg/src/main/resources/application.yml
@@ -1,4 +1,12 @@
 spring:
+  mail:
+    host: smtp.gmail.com
+    port: 587
+    username: bagume619@gmail.com
+    password: ixekzqmgromewdld
+    properties:
+      mail.smtp.auth: true
+      mail.smtp.starttls.enable: true
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://portfolio.cgdrwidry3wi.ap-northeast-2.rds.amazonaws.com:3306/androg
