--- a/front_androg/package.json
+++ b/front_androg/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
+    "modules": "^0.4.0",
     "qs": "^6.11.1",
     "react": "^18.2.0",
     "react-daum-postcode": "^3.1.1",
