--- a/androg/src/main/resources/application.yml
+++ b/androg/src/main/resources/application.yml
@@ -29,8 +29,8 @@ spring:
               - email
               - profile
           kakao:
-            client-id: 1932e3e68d4e6ca2ec3e566e6b6b55f7
-            client-secret: BsNWBsgDcAM0Ff4A7CpgBZOBM2jtNXMd
+            client-id: 28071fcf9324548813728c0ce3d2ecda
+            client-secret: VbTwPTDvR5rqaOyIhbB039ce0nZKGlr
             redirect-uri: https://port-0-androg-portfolio-app-back-7xwyjq992llitnrgqd.sel4.cloudtype.app/login/oauth2/code/kakao
             authorization-grant-type: authorization_code
             client-authentication-method: POST
@@ -39,8 +39,8 @@ spring:
               - profile_nickname
               - account_email
           naver:
-            client-id: QWEPYwG2j9mrsHN2I81l
-            client-secret: RitP1Sj6kz
+            client-id: gU7ZHAmj3YrqxImuY4zh
+            client-secret: u3tM1t069m
             redirect-uri:  https://port-0-androg-portfolio-app-back-7xwyjq992llitnrgqd.sel4.cloudtype.app/login/oauth2/code/naver
             authorization-grant-type: authorization_code
             scope:
